# PRISM.k1

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  MIGRATION.md  MULTI_AGENT_SETUP.md  README.md  STATUS.md  multi-agent-launch.sh  multi-agent-setup.sh  my-report.json  opencode.json  taskmaster  tsconfig.base.json
.agent/: 3_AGENT_DEPLOYMENT_PLAN.md  AGENT_1_FIRMWARE_COMMANDS.md  AGENT_1_FIRMWARE_RUNTIME.md  AGENT_1_FOUNDATION_ADVANCED.md  AGENT_1_ONWARDS.md  AGENT_1_TASK_10_RESUME.md  AGENT_2_HANDOVER_BUILD_FIX.md  AGENT_2_PARSER_FORMAT.md  AGENT_2_PARSER_SHAPES.md  AGENT_2_STUDIO_FOUNDATION.md  AGENT_3_ONWARDS.md  AGENT_3_RELEASE_V1.1.md  AGENT_3_TOOLING_RELEASE.md  AGENT_3_TRIAGE_ORDERS.md  AGENT_3_WAVE_RELEASE.md  AGENT_ASSIGNMENTS.md  CAPTAIN_HANDOFF.md  DEPLOYMENT_QUICKSTART.md  HANDOVER.md  README.md  TASK_11_BRIEF_CODEX.md  TASK_12_BRIEF_CODEX.md  TASK_3_BRIEF_AGENT_2.md  TASK_4_BRIEF_AGENT_4.md  TASK_5_RECOVERY_AGENT_3.md  cursor-workflow.md  dashboard-proposals.md  instructions.md  mcp-usage.md  multi-agent-quickstart.md  multi-agent.md  research-first.md  taskmaster-reference.md  workflow.md
.beads/: issues.jsonl
.deprecated/: README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  (+2 more)
.taskmaster/: ADR_GUIDE.md  CANON.md  CANON_TASK_CORRECTIONS.md  METHODOLOGY.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  README.md  TASK_REGENERATION_REPORT.md  VALIDATION_GUIDE.md  agent-capabilities.json  agent-rules.yml  config.json  state.json
.tools/: go
assets/: custom_delay.json
docs/: user-manual.md
firmware/: CMakeLists.txt  README.md  idf_component.yml  partitions-4mb.csv  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/components/network/: CMakeLists.txt  Kconfig  README.md  TASK3_ARCHITECTURE.md  TASK3_IMPLEMENTATION_COMPLETE.md  TASK4_ARCHITECTURE.md  idf_component.yml  network_manager.c  network_private.h  protocol_parser.c  uart_test.c
firmware/components/network/include/: network_manager.h  protocol_parser.h
firmware/components/network/test/: CMakeLists.txt  README.md  test_network_manager.c  test_protocol_parser.c
firmware/components/playback/: CMakeLists.txt  Kconfig  README.md  effect_engine.c  led_driver.c  led_playback.c  prism_temporal.c  prism_temporal_runtime.c  prism_wave_tables.c
firmware/components/playback/include/: effect_engine.h  led_driver.h  led_playback.h  prism_temporal.h  prism_temporal_api.h  prism_wave_tables.h
firmware/components/playback/test/: CMakeLists.txt  test_custom_mode.c  test_prism_temporal.c
firmware/components/storage/: CMakeLists.txt  idf_component.yml  pattern_cache.c  pattern_storage.c  pattern_storage_crud.c  prism_parser.c  storage_protocol.c
firmware/components/storage/include/: pattern_cache.h  pattern_metadata.h  pattern_storage.h  prism_parser.h  storage_protocol.h
firmware/components/tests/: CMakeLists.txt  README.md  golden_temporal.h  test_component_init.c  test_decode_microbench.c  test_effect_engine.c  test_pattern_cache.c  test_prism_parser.c  test_templates_deploy.c  test_templates_list.c  test_temporal_shapes.c  test_temporal_shapes_snapshots.c  test_wave_tables.c
firmware/main/: CMakeLists.txt  main.c
multi-agent/: .canon-hash  QUICKSTART.md  README.md  verify-installation.sh
scripts/: cleanup.sh
studio/: README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/.cargo/: config.toml
studio/src-tauri/.config/: nextest.toml
studio/src-tauri/src/: lib.rs
tools/: README.md  __init__.py  __main__.py  check_deps.py  migrate_prism.py  palette_to_prism.py  preset_library.py  prism_packaging.py  requirements.txt  show_to_prism.py  tooling_core.py
(+516 files in other folders)
