[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-store = "2"
keyring = "2.3.2"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
crc32fast = "1"
futures-util = "0.3"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
mdns-sd = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-tungstenite = "0.23"
tungstenite = { version = "0.21", default-features = false, features = ["handshake"] }
url = "2"
anyhow = "1"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
